# memlz

./: CMakeLists.txt  Folder.DotSettings
CMakeInstall/: memlz-config.cmake.in
demo/: demo.c  demo.cpp
memlz/: CMakeLists.txt
memlz/include/: memlz.h
test/: .unit_tests.cpp.swp  CMakeLists.txt  unit_tests.cpp
